https://bugs.webkit.org/show_bug.cgi?id=75860 [Chromium Mac] no background is drawn for input elements

Patch by Avi Drissman <avi@chromium.org> on 2012-01-09
Reviewed by Dimitri Glazkov.

Reverts r104240 for Chromium. Unfortunately the code that uses Cocoa
API misbehaves when built with the 10.5 SDK, so we use SPI. For now.

* rendering/RenderThemeChromiumMac.h:
* rendering/RenderThemeChromiumMac.mm:
(WebCore::RenderThemeChromiumMac::paintTextField):


Canonical link: https://commits.webkit.org/92689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104494 268f45cc-cd09-0410-ab3c-d52691b4dbfc